work on fundamentals

--- a/main.bib
+++ b/main.bib
@@ -1727,3 +1727,12 @@ url={https://openreview.net/forum?id=HJGven05Y7},
 
 
  @article{Mu_Gilmer_2019, title={MNIST-C: A Robustness Benchmark for Computer Vision}, url={http://arxiv.org/abs/1906.02337}, abstractNote={We introduce the MNIST-C dataset, a comprehensive suite of 15 corruptions applied to the MNIST test set, for benchmarking out-of-distribution robustness in computer vision. Through several experiments and visualizations we demonstrate that our corruptions significantly degrade performance of state-of-the-art computer vision models while preserving the semantic content of the test images. In contrast to the popular notion of adversarial robustness, our model-agnostic corruptions do not seek worst-case performance but are instead designed to be broad and diverse, capturing multiple failure modes of modern models. In fact, we find that several previously published adversarial defenses significantly degrade robustness as measured by MNIST-C. We hope that our benchmark serves as a useful tool for future work in designing systems that are able to learn robust feature representations that capture the underlying semantics of the input.}, note={arXiv:1906.02337 [cs]}, number={arXiv:1906.02337}, publisher={arXiv}, author={Mu, Norman and Gilmer, Justin}, year={2019}, month={Jun} }
+
+@article{tolstikhin2021mlp,
+  title={MLP-Mixer: An All-MLP Architecture for Vision},
+  author={Tolstikhin, Ilya O and Houlsby, Neil and Kolesnikov, Alexander and Beyer, Lucas and Zhai, Xiaohua and Unterthiner, Thomas and Yung, Jessica and Steiner, Andreas and Keysers, Daniel and Uszkoreit, Jakob and others},
+  journal={Advances in Neural Information Processing Systems},
+  volume={34},
+  pages={24261--24272},
+  year={2021}
+}
